Reorganize header and add text to title

--- a/shoes.html
+++ b/shoes.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/style-tablet.css">
-    <link rel="stylesheet" href="assets/css/style-desktop.css">
     <meta name="description" content="Climbing Rox. Climbing content for all kinds of climbers">
     <meta name="keywords" content="climbing, boulder, toprope, lead climbing, sports, exercise">
     <meta name="author" content="Maria Ciceri">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-tablet.css">
+    <link rel="stylesheet" href="assets/css/style-desktop.css">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons8-mountain-16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons8-mountain-32.png">
     <link rel="icon" type="image/x-icon" href="assets/images/icons8-mountain-16.ico">
-    <title>Climb Rox</title>
+    <title>Climb Rox / How to choose shoes</title>
 </head>
 
 <body>
