--- a/advice.html
+++ b/advice.html
@@ -63,7 +63,7 @@
         <a href="#" id="back-to-top" aria-label="Back to top button"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
 
         <!-- intro article selection -->
-        <section class="main-content">
+        <article class="main-content">
             <h2>Articles</h2>
             <p>In here you will find all the information you need to make wise decision
                 in your climbing journey.
@@ -98,18 +98,23 @@
                     </div>
                 </a>
             </section>
-        </section>
+        </article>
 
         <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
     </main>
     <footer class="footer" id="footer">
         <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
-            rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
-                class="fa-brands fa-x-twitter"></i></a>
+            rel="noopener">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener">
+            <i class="fa-brands fa-x-twitter"></i>
+            </a>
         <a href="https://open.spotify.com/" target="_blank" aria-label="Open spotify page on a new tab"
-            rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+            rel="noopener">
+            <i class="fa-brands fa-spotify"></i>
+        </a>
     </footer>
 </body>
 
