--- a/index.html
+++ b/index.html
@@ -104,11 +104,17 @@
     <footer class="footer" id="footer">
         <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
-            rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
-                class="fa-brands fa-x-twitter"></i></a>
+            rel="noopener">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener">
+            <i
+                class="fa-brands fa-x-twitter"></i>
+            </a>
         <a href="https://open.spotify.com/" target="_blank" aria-label="Open spotify page on a new tab"
-            rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+            rel="noopener">
+            <i class="fa-brands fa-spotify"></i>
+        </a>
     </footer>
 
     <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
