--- a/advice.html
+++ b/advice.html
@@ -64,18 +64,25 @@
 
         <!-- intro article selection -->
         <article class="main-content">
-            <h2>Articles</h2>
-            <p>In here you will find all the information you need to make wise decision
-                in your climbing journey.
-                We want to cover from how to choose equipment to best places on mother
-                Earth to go on a climbing trip.
+            <h2>Advice</h2>
+            <p>
+                This is our advice page. Here you can choose what you want to read about in the article section below. 
+                We hope you find what you are looking for.
             </p>
-            <p>We will post continuosly so keep an eye open to new articles or
-                listen to our podcast, everything we say there we bring up comes here also.
-            </p>
-            <p> Have fun, and if there is something that you didn't find and really want us to write about, please
-                write to us on <a href="#"><em>Get Help</em></a>.
-            </p>
+            <article>
+                <h3>Articles</h3>
+                <p>In here you will find all the information you need to make wise decision
+                    in your climbing journey.
+                    We want to cover from how to choose equipment to best places on mother
+                    Earth to go on a climbing trip.
+                </p>
+                <p>We will post continuosly so keep an eye open to new articles or
+                    listen to our podcast, everything we say there we bring up comes here also.
+                </p>
+                <p> Have fun, and if there is something that you didn't find and really want us to write about, please
+                    write to us on <a href="#"><em>Get Help</em></a>.
+                </p>
+            </article>
 
             <!-- articles available -->
             <section class="article-selection">
