Fix style for tablet adn desktop

--- a/climb-types.html
+++ b/climb-types.html
@@ -76,7 +76,7 @@
                 There are three main kinds of sport climbing: <a href="#single-pitch-link"
                     aria-label="go to single-pitch topic"><em>single-pitch</em></a> and
                 <a href="#multi-pitch-link" aria-label="go to multi-pitch topic"><em>multi-pitch</em></a> and <a
-                    href="#boulder" aria-label="go to boulder topic"><em>boulder</em></a> and they
+                    href="#boulder-link" aria-label="go to boulder topic"><em>boulder</em></a> and they
                 vary
                 quite
                 much. So read through it and find out which one (if not all) is for you.
