--- a/shoes.html
+++ b/shoes.html
@@ -106,9 +106,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="shoe-shape">
+            </section>
+            <section>
+                <div class="shapes">
                     <h3 id="shoe-shape">Shoe shape</h3>
-                    <div class="shapes">
+                    <div>
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
                             class="article-img content-image" id="neutral">
@@ -122,8 +124,10 @@
                             the extra rubber.
                         </p>
                     </div>
-                    <div class="shapes">
-                        <h4 id="moderate-heading">Moderate Shape</h4>
+                </div>
+                <div class="shapes">
+                    <h4 id="moderate-heading">Moderate Shape</h4>
+                    <div>
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
                             class="article-img content-image" id="moderate">
                         <img src="assets/images/moderate-2.webp" alt="feet of a person climbing"
@@ -135,8 +139,10 @@
                             the rubber gets thinner for more sensibility.
                         </p>
                     </div>
-                    <div class="shapes">
-                        <h4>Aggressive Shape</h4>
+                </div>
+                <div class="shapes">
+                    <h4>Aggressive Shape</h4>
+                    <div>
                         <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
                             class="article-img content-image" id="aggressive">
                         <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing"
